main_home.css
/* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
html{-webkit-text-size-adjust:100%}body{margin:0}
article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}
audio,canvas,video{display:inline-block;vertical-align:baseline}
audio:not([controls]){display:none;height:0}[hidden],template{display:none}
a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}
dfn{font-style:italic}mark{background:#ff0;color:#000}
small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
sup{top:-0.5em}sub{bottom:-0.25em}
img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}
hr{-moz-box-sizing:content-box;box-sizing:content-box}
code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}
button,input,select,textarea{font:inherit;margin:0}
button{overflow:visible}button,select{text-transform:none}
button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}
button[disabled],html input[disabled]{cursor:default}
button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}
input[type=checkbox],input[type=radio]{padding:0}
input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}
input[type=search]{box-sizing:content-box;-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box}
input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}
fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em}
/* End extract from normalize.css */


/**
 * The basics.
 */

* {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing:border-box;
}

html, body {
	font-family: 'Roboto', sans-serif;
	font-size: 16px;
	line-height: 1.5;
}

html {
	overflow-x: hidden;
}

h1 {
	font-family: 'Dosis',sans-serif;
	font-size: 124px;
}

h2, h3, h4, h5, h6 {
	font-family: 'Roboto', Arial, sans-serif;
}

li, footer {
	font-family: 'Roboto',sans-serif;
}

h2 {
	font-size: 48px;
}

h3 {
	font-size: 30px;
}

h4 {
	font-size: 20px;
}

h5 {
	font-size: 18px;
}

h6 {
	font-size: 16px;
}

p {
	font-size: 18px;
	font-weight: 300;
}

a {
	color: inherit;
}

h1, h2, h3, h4, h5, h6 {
	font-weight: 400;
	margin: 10px 0;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
	font-weight: inherit;
}

hr {
	height: 0;
	width: 150px;
	border: 0;
	border-top: 1px solid #252525;
	margin: 20px auto;
}

/**
 * Homepage-specific rules.
 */

/* Tip taken from: https://hackernoon.com/removing-that-ugly-focus-ring-and-keeping-it-too-6c8727fefcd2. */
body:not(.user-is-tabbing) #down-arrow:focus {
  outline: none;
}

hr.section-divider {
	width: 100px;
}

#bio-one-line {
	margin: 30px 0px 20px;
}

#down-arrow {
	border-radius: 50%;
	cursor: pointer;
}

@media only screen and (min-width: 1224px) {
    #down-arrow:hover {
        background-color: #ededed;
    }
}

#down-arrow-container {
	width: 50px;
	margin: 0px auto 24px auto;
}

#homepage-name {
	margin: 0px auto;
	width: 72vw;
	max-width: 450px;
}

@media only screen and (min-width: 500px) {
	#homepage-name {
		width: 60vw;
	}
}

@media only screen and (min-width: 650px) {
	#homepage-name {
		width: 50vw;
	}
}

@media only screen and (min-width: 850px) {
	#homepage-name {
		width: 40vw;
	}
}

@media only screen and (min-width: 1000px) {
	#homepage-name {
		width: 33vw;
	}
}

#homepage-splash {
	margin-top: 30px;
}

@media only screen and (min-width: 600px) {
	#homepage-splash {
		margin-top: 50px;
	}
}

#about-me {
	color: #000;
	background-color: #d0d8eb;
}

#profile-picture {
	border-radius: 50%;
	max-width: 225px;
}

#profile-picture-container {
	padding-top: 40px;
	padding-bottom: 16px;
}

#social-icons {
	padding-top: 12px;
	font-size: 36px;
}

#social-icons i {
	animation-duration: 0.5s;
	animation-timing-function: cubic-bezier(0,0,0,1);
	animation-fill-mode: forwards;
	transition: all 0.3s;
	padding: 0 12px;
}

#social-icons i:hover {
	transform: translateY(-4px);
}

#social-icons i#linkedin-logo:hover {
	color: #0077b5;
}

#social-icons i#github-logo:hover {
	color: #394a6d;
}

#social-icons i#instagram-logo:hover {
	background:
	/* Colors provided by: https://codepen.io/katydecorah/pen/PNLePj */

    /* left bottom */
    radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%),
    radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%),
    /* left top */
    radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%),
    radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%),
    /* right top */
    radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%),
    radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%),
    /* right bottom */
    radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent),

    /* create a base coat to smooth corner gradients */
    linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);

	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	background-repeat: no-repeat;
}

#social-icons i#spotify-logo:hover {
	color: #1ed761;
}

#social-icons i#youtube-logo:hover {
	color: #ff0000;
}

#social-media-message {
	padding-top: 16px;
	padding-bottom: 16px;
}


/**
 * Containers + spacing.
 */

.ama-center {
	text-align: center;
}

.ama-container {
	padding: 0.01em 16px;
}

.ama-container:after, .ama-row:after, .ama-row-padding:after {
	content: "";
	display: table;
	clear: both;
}


/**
 * Columns.
 */

.ama-col{float:left;width:100%}
.ama-col.s1{width:8.33333%}
.ama-col.s2{width:16.66666%}
.ama-col.s3{width:24.99999%}
.ama-col.s4{width:33.33333%}
.ama-col.s5{width:41.66666%}
.ama-col.s6{width:49.99999%}
.ama-col.s7{width:58.33333%}
.ama-col.s8{width:66.66666%}
.ama-col.s9{width:74.99999%}
.ama-col.s10{width:83.33333%}
.ama-col.s11{width:91.66666%}
.ama-col.s12{width:99.99999%}
@media only screen and (min-width:601px){
.ama-col.m1{width:8.33333%}
.ama-col.m2{width:16.66666%}
.ama-col.m3{width:24.99999%}
.ama-col.m4{width:33.33333%}
.ama-col.m5{width:41.66666%}
.ama-col.m6{width:49.99999%}
.ama-col.m7{width:58.33333%}
.ama-col.m8{width:66.66666%}
.ama-col.m9{width:74.99999%}
.ama-col.m10{width:83.33333%}
.ama-col.m11{width:91.66666%}
.ama-col.m12{width:99.99999%}}
@media only screen and (min-width:993px){
.ama-col.l1{width:8.33333%}
.ama-col.l2{width:16.66666%}
.ama-col.l3{width:24.99999%}
.ama-col.l4{width:33.33333%}
.ama-col.l5{width:41.66666%}
.ama-col.l6{width:49.99999%}
.ama-col.l7{width:58.33333%}
.ama-col.l8{width:66.66666%}
.ama-col.l9{width:74.99999%}
.ama-col.l10{width:83.33333%}
.ama-col.l11{width:91.66666%}
.ama-col.l12{width:99.99999%}}


/**
 * Formatting utilities.
 */

.colored-link {
	color: #0d47a1;
	font-weight: 400;
	text-decoration: none; /* Removes underlines. */
}

.link-no-underline {
	text-decoration: none; /* Removes underlines. */
}

.secondary-caption {
	font-size: 24px;
}

.screenreader-only { 
	position: absolute;
	overflow: hidden;
	clip: rect(0 0 0 0);
	height: 1px;
	width: 1px;
	margin: -1px;
	padding: 0;
	border: 0;
}

/**
 * Image utilities.
 */

img {
	max-width: 100%;
	border-radius: 8px;
	margin-bottom: -5px;
}

img[src$=".svg"] {
	width: 100%;
}

.social-icon {
	margin: 0 2px 0 2px;
}


/**
 * Navigation bar and footer formatting.
 */

#logo {
	cursor: pointer;
	max-height: 40px;
}

#logo-container {
	display: inline-block;
	vertical-align: middle;
}

#menu-buttons-container {
	float: right;
}

.menu-button {
	display: inline-block;
	vertical-align: middle;
	border-radius: 8px;
	text-transform: uppercase;
}

.menu-button:hover {
	background-color: #ededed;
}

.menu-button-untouched {
	color: #666666;
}

.menu-button-touched, .hidden-link:hover {
	color: #0d47a1;
}

#hamburger-button {
	float: right;
}

#top-nav {
	margin: 0px 8px;
	font-size: 18px;
	padding-top: 8px;
	padding-bottom: 8px;
}

#top-nav a {
	padding: 8px 12px;
	text-decoration: none;
}

#top-nav #hamburger-button {
	display: none;
}

/* When the screen is less than 620 pixels wide, hide all links, except for those with the `mobile-nav` class.
Show the link that contains the hamburger icon. */
@media screen and (max-width: 620px) {
	#top-nav a:not(.mobile-nav) {
		display: none;
	}
	#top-nav #hamburger-button {
		float: right;
		display: block;
	}
}

/* The `responsive` class is added to the topnav with JavaScript when the user clicks on the icon. */
@media screen and (max-width: 620px) {
	#top-nav.responsive {
		position: relative;
	}
	#top-nav.responsive a#hamburger-button {
		position: absolute;
		right: 0;
		top: 8px;
	}
	#top-nav.responsive a:not(#logo-container) {
		float: none;
		display: block;
		text-align: center;
	}
	#menu-buttons-container.responsive {
		float: none;
	}
}

.copyright-text {
	font-size: 1em;
	font-weight: 400;
}

